fix: migrate angular control flow

--- a/interfaces/IBF-dashboard/src/app/app.component.html
+++ b/interfaces/IBF-dashboard/src/app/app.component.html
@@ -1,6 +1,8 @@
 <ion-app>
-  <div class="loader" *ngIf="loading" data-test="loader">
-    <ion-spinner color="light"></ion-spinner>
-  </div>
+  @if (loading) {
+    <div class="loader" data-test="loader">
+      <ion-spinner color="light"></ion-spinner>
+    </div>
+  }
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
