--- a/interfaces/IBF-dashboard/src/app/components/change-password-popover/change-password-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/change-password-popover/change-password-popover.component.html
@@ -9,7 +9,6 @@
     <ion-card-title>Change Password</ion-card-title>
   </ion-card-header>
   <ion-card-content class="ion-padding-top ion-text-center">
-    <!-- <ion-item lines="none"> -->
     <form
       #changePasswordForm="ngForm"
       (ngSubmit)="onSubmit()"
@@ -46,11 +45,13 @@
         ></ion-input>
       </ion-item>
       <div class="validation-message ion-margin-top">
-        <ion-note color="danger" *ngIf="showDifferentPasswordMessage">
-          <small>
-            <strong>Passwords do not match.</strong>
-          </small>
-        </ion-note>
+        @if (showDifferentPasswordMessage) {
+          <ion-note color="danger">
+            <small>
+              <strong>Passwords do not match.</strong>
+            </small>
+          </ion-note>
+        }
       </div>
       <app-ibf-button
         type="submit"
@@ -62,6 +63,5 @@
         <ion-icon slot="end" name="sync"></ion-icon>
       </app-ibf-button>
     </form>
-    <!-- </ion-item> -->
   </ion-card-content>
 </ion-card>
