--- a/interfaces/IBF-dashboard/src/app/components/date-button/date-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/date-button/date-button.component.html
@@ -1,23 +1,26 @@
 <span class="date-text">
-  <div *ngIf="firstLine">
-    <span class="first-line">{{ firstLine }}</span>
-    <br />
-  </div>
+  @if (firstLine) {
+    <div>
+      <span class="first-line">{{ firstLine }}</span>
+      <br />
+    </div>
+  }
   <span class="second-line">{{ secondLine }}</span>
-  <div *ngIf="thirdLine">
-    <span class="third-line">{{ thirdLine }}</span>
-    <br />
-  </div>
+  @if (thirdLine) {
+    <div>
+      <span class="third-line">{{ thirdLine }}</span>
+      <br />
+    </div>
+  }
 </span>
-<ion-icon
-  *ngIf="alert && thresholdReached"
-  class="warning-icon"
-  src="/assets/icons/Alert_Title_Purple.svg"
-  slot="end"
-></ion-icon>
-<ion-icon
-  *ngIf="alert && !thresholdReached"
-  class="warning-icon"
-  src="/assets/icons/Alert_Title_Navy.svg"
-  slot="end"
-></ion-icon>
+@if (alert) {
+  <ion-icon
+    class="warning-icon"
+    [src]="
+      thresholdReached
+        ? '/assets/icons/Alert_Title_Purple.svg'
+        : '/assets/icons/Alert_Title_Navy.svg'
+    "
+    slot="end"
+  ></ion-icon>
+}
