--- a/interfaces/IBF-dashboard/src/app/components/disclaimer-toolbar/disclaimer-toolbar.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disclaimer-toolbar/disclaimer-toolbar.component.html
@@ -1,9 +1,7 @@
-<ion-toolbar
-  *ngIf="environmentConfiguration === 'stage'"
-  class="disclaimer-toolbar"
-  color="ibf-primary"
->
-  <ion-title class="ion-text-center" size="small"
-    >IBF DEMO - SIMULATED DATA</ion-title
-  >
-</ion-toolbar>
+@if (environmentConfiguration === 'stage') {
+  <ion-toolbar class="disclaimer-toolbar" color="ibf-primary">
+    <ion-title class="ion-text-center" size="small"
+      >IBF DEMO - SIMULATED DATA</ion-title
+    >
+  </ion-toolbar>
+}
