--- a/interfaces/IBF-dashboard/src/app/components/tooltip/tooltip.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/tooltip/tooltip.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="value">
+@if (value) {
   <ion-button
     fill="clear"
     shape="round"
@@ -14,4 +14,4 @@
       slot="icon-only"
     ></ion-icon>
   </ion-button>
-</ng-container>
+}
