--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -1,126 +1,141 @@
-<div *ngIf="showAggregatesSection()">
-  <ion-grid class="ion-no-padding">
-    <ion-row
-      class="component-title"
-      style="background: var(--ion-color-ibf-secondary)"
-      data-test="action-title"
-    >
-      <ion-col class="ion-no-padding">
-        <ion-item
-          lines="none"
-          class="component-title-item ion-no-margin"
-          [color]="isActiveAreas() ? 'ibf-secondary' : 'ibf-no-alert-secondary'"
-        >
-          <ion-col class="ion-no-padding ion-no-margin ion-align-items-center">
-            <ion-label color="ibf-black"
-              ><ion-text
-                ><strong>{{
-                  getAggregatesHeader(mapView | async).headerLabel
-                }}</strong></ion-text
-              ></ion-label
-            >
-            <ion-label color="ibf-black"
-              ><ion-text
-                [innerHTML]="
-                  getAggregatesHeader(mapView | async).subHeaderLabel
-                "
-              ></ion-text
-            ></ion-label>
-          </ion-col>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <div data-test="aggregate-list">
-      <ion-row *ngFor="let indicator of indicators" class="ion-no-padding">
-        <ion-col size-lg="7" size-md="7" size-xs="7">
-          <ion-item class="aggregate-item ion-no-padding" color="ibf-white">
-            <ion-thumbnail slot="start" class="aggregate-item-thumbnail">
-              <ion-img src="assets/icons/{{ indicator.icon }}"></ion-img>
-            </ion-thumbnail>
-            <ion-label class="aggregate-item-label" [title]="indicator.label">
-              <span *ngIf="indicator.weightedAvg"></span>
-
-              {{ indicator.label }}
-            </ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col size-lg="4" size-md="4" size-xs="4">
+@if (showAggregatesSection()) {
+  <div>
+    <ion-grid class="ion-no-padding">
+      <ion-row
+        class="component-title"
+        style="background: var(--ion-color-ibf-secondary)"
+        data-test="action-title"
+      >
+        <ion-col class="ion-no-padding">
           <ion-item
-            class="aggregate-item-value ion-no-padding"
-            style="--inner-padding-end: 4px"
-            color="ibf-white"
+            lines="none"
+            class="component-title-item ion-no-margin"
+            [color]="
+              isActiveAreas() ? 'ibf-secondary' : 'ibf-no-alert-secondary'
+            "
           >
-            <ion-label
-              *ngIf="!isAggregateNan(indicator.name, indicator.weightedAvg)"
-              class="ion-text-right"
-              data-test="aggregate-number"
+            <ion-col
+              class="ion-no-padding ion-no-margin ion-align-items-center"
             >
-              <span *ngIf="indicator.numberFormatAggregate === 'decimal2'">
-                {{
-                  getAggregate(
-                    indicator.name,
-                    indicator.weightedAvg,
-                    indicator.numberFormatAggregate
-                  )
-                    | number: '.2-2'
-                    | translate
-                }}
-              </span>
-              <span *ngIf="indicator.numberFormatAggregate === 'decimal0'">
-                {{
-                  getAggregate(
-                    indicator.name,
-                    indicator.weightedAvg,
-                    indicator.numberFormatAggregate
-                  )
-                    | number: '.0-0'
-                    | translate
-                }}
-              </span>
-              <span *ngIf="indicator.numberFormatAggregate === 'perc'">
-                {{
-                  getAggregate(
-                    indicator.name,
-                    indicator.weightedAvg,
-                    indicator.numberFormatAggregate
-                  )
-                    | percent: '.0-0'
-                    | translate
-                }}
-              </span>
-              {{ indicator.aggregateUnit }}
-            </ion-label>
-            <ion-label
-              *ngIf="isAggregateNan(indicator.name, indicator.weightedAvg)"
-              class="ion-text-right"
-              data-test="aggregate-na"
-            >
-              {{ 'aggregates-component.not-applicable' | translate }}
-            </ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col
-          size-lg="1"
-          size-md="1"
-          size-xs="1"
-          [title]="'aggregates-component.more-information' | translate"
-        >
-          <ion-item
-            class="aggregate-item-information-icon ion-no-padding"
-            data-test="icon-row"
-            style="--inner-padding-end: 0px"
-            color="ibf-white"
-          >
-            <ion-label>
-              <img
-                class="info-img"
-                src="assets/icons/source-info.svg"
-                (click)="moreInfo(indicator)"
-              />
-            </ion-label>
+              <ion-label color="ibf-black"
+                ><ion-text
+                  ><strong>{{
+                    getAggregatesHeader(mapView | async).headerLabel
+                  }}</strong></ion-text
+                ></ion-label
+              >
+              <ion-label color="ibf-black"
+                ><ion-text
+                  [innerHTML]="
+                    getAggregatesHeader(mapView | async).subHeaderLabel
+                  "
+                ></ion-text
+              ></ion-label>
+            </ion-col>
           </ion-item>
         </ion-col>
       </ion-row>
-    </div>
-  </ion-grid>
-</div>
+      <div data-test="aggregate-list">
+        @for (indicator of indicators; track indicator.name) {
+          <ion-row class="ion-no-padding">
+            <ion-col size-lg="7" size-md="7" size-xs="7">
+              <ion-item class="aggregate-item ion-no-padding" color="ibf-white">
+                <ion-thumbnail slot="start" class="aggregate-item-thumbnail">
+                  <ion-img src="assets/icons/{{ indicator.icon }}"></ion-img>
+                </ion-thumbnail>
+                <ion-label
+                  class="aggregate-item-label"
+                  [title]="indicator.label"
+                >
+                  {{ indicator.label }}
+                </ion-label>
+              </ion-item>
+            </ion-col>
+            <ion-col size-lg="4" size-md="4" size-xs="4">
+              <ion-item
+                class="aggregate-item-value ion-no-padding"
+                style="--inner-padding-end: 4px"
+                color="ibf-white"
+              >
+                @if (!isAggregateNan(indicator.name, indicator.weightedAvg)) {
+                  <ion-label
+                    class="ion-text-right"
+                    data-test="aggregate-number"
+                  >
+                    @switch (indicator.numberFormatAggregate) {
+                      @case ('decimal2') {
+                        <span>
+                          {{
+                            getAggregate(
+                              indicator.name,
+                              indicator.weightedAvg,
+                              indicator.numberFormatAggregate
+                            )
+                              | number: '.2-2'
+                              | translate
+                          }}
+                        </span>
+                      }
+                      @case ('decimal0') {
+                        <span>
+                          {{
+                            getAggregate(
+                              indicator.name,
+                              indicator.weightedAvg,
+                              indicator.numberFormatAggregate
+                            )
+                              | number: '.0-0'
+                              | translate
+                          }}
+                        </span>
+                      }
+                      @case ('perc') {
+                        <span>
+                          {{
+                            getAggregate(
+                              indicator.name,
+                              indicator.weightedAvg,
+                              indicator.numberFormatAggregate
+                            )
+                              | percent: '.0-0'
+                              | translate
+                          }}
+                        </span>
+                      }
+                    }
+                    {{ indicator.aggregateUnit }}
+                  </ion-label>
+                } @else {
+                  <ion-label class="ion-text-right" data-test="aggregate-na">
+                    {{ 'aggregates-component.not-applicable' | translate }}
+                  </ion-label>
+                }
+              </ion-item>
+            </ion-col>
+            <ion-col
+              size-lg="1"
+              size-md="1"
+              size-xs="1"
+              [title]="'aggregates-component.more-information' | translate"
+            >
+              <ion-item
+                class="aggregate-item-information-icon ion-no-padding"
+                data-test="icon-row"
+                style="--inner-padding-end: 0px"
+                color="ibf-white"
+              >
+                <ion-label>
+                  <img
+                    class="info-img"
+                    src="assets/icons/source-info.svg"
+                    (click)="moreInfo(indicator)"
+                  />
+                </ion-label>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        }
+      </div>
+    </ion-grid>
+  </div>
+}
