--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="eventState?.thresholdReached && showAreasOfFocusSummary()">
+@if (eventState?.thresholdReached && showAreasOfFocusSummary()) {
   <ion-row
     class="component-title"
     color="ibf-secondary"
@@ -51,61 +51,64 @@
       </ion-item>
     </ion-col>
   </ion-row>
-  <ion-row
-    *ngFor="let areaOfFocus of areasOfFocus"
-    class="ion-no-padding"
-    style="margin-bottom: 1px"
-    data-test="action-summary-types"
-  >
-    <ng-container>
-      <ion-col size-lg="8" size-md="8" size-xs="8">
-        <ion-item
-          lines="none"
-          class="areas-of-focus-item ion-no-padding"
-          color="ibf-white"
-        >
-          <ion-thumbnail slot="start" class="areas-of-focus-item-thumbnail">
-            <ion-img src="assets/icons/{{ areaOfFocus.icon }}"></ion-img>
-          </ion-thumbnail>
-          <ion-label class="areas-of-focus-item-label">
-            {{ areaOfFocus.label }}
-          </ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col size-lg="3" size-md="3" size-xs="3">
-        <ion-item lines="none" class="areas-of-focus-item-value">
-          <ion-label color="ibf-black">
-            <span *ngIf="areaOfFocus.count > 0"
-              >{{ areaOfFocus.countChecked }} / {{ areaOfFocus.count }}</span
-            >
-            <span
-              *ngIf="areaOfFocus.count === 0"
-              class="actions-not-applicable"
-            >
-              {{
-                'areas-of-focus-summary-component.not-applicable' | translate
-              }}</span
-            >
-          </ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col size-lg="1" size-md="1" size-xs="1">
-        <ion-item
-          lines="none"
-          class="areas-of-focus-item-information-icon ion-no-padding"
-          data-test="icon-row"
-          style="--inner-padding-end: 0px"
-          color="ibf-white"
-        >
-          <ion-label>
-            <img
-              class="info-img"
-              src="assets/icons/source-info.svg"
-              (click)="moreInfo(areaOfFocus)"
-            />
-          </ion-label>
-        </ion-item>
-      </ion-col>
-    </ng-container>
-  </ion-row>
-</ng-container>
+  @for (areaOfFocus of areasOfFocus; track areaOfFocus.id) {
+    <ion-row
+      class="ion-no-padding"
+      style="margin-bottom: 1px"
+      data-test="action-summary-types"
+    >
+      <ng-container>
+        <ion-col size-lg="8" size-md="8" size-xs="8">
+          <ion-item
+            lines="none"
+            class="areas-of-focus-item ion-no-padding"
+            color="ibf-white"
+          >
+            <ion-thumbnail slot="start" class="areas-of-focus-item-thumbnail">
+              <ion-img src="assets/icons/{{ areaOfFocus.icon }}"></ion-img>
+            </ion-thumbnail>
+            <ion-label class="areas-of-focus-item-label">
+              {{ areaOfFocus.label }}
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size-lg="3" size-md="3" size-xs="3">
+          <ion-item lines="none" class="areas-of-focus-item-value">
+            <ion-label color="ibf-black">
+              @if (areaOfFocus.count > 0) {
+                <span
+                  >{{ areaOfFocus.countChecked }} /
+                  {{ areaOfFocus.count }}</span
+                >
+              } @else {
+                <span class="actions-not-applicable">
+                  {{
+                    'areas-of-focus-summary-component.not-applicable'
+                      | translate
+                  }}</span
+                >
+              }
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size-lg="1" size-md="1" size-xs="1">
+          <ion-item
+            lines="none"
+            class="areas-of-focus-item-information-icon ion-no-padding"
+            data-test="icon-row"
+            style="--inner-padding-end: 0px"
+            color="ibf-white"
+          >
+            <ion-label>
+              <img
+                class="info-img"
+                src="assets/icons/source-info.svg"
+                (click)="moreInfo(areaOfFocus)"
+              />
+            </ion-label>
+          </ion-item>
+        </ion-col>
+      </ng-container>
+    </ion-row>
+  }
+}
