--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/threshold-bar/threshold-bar.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/threshold-bar/threshold-bar.component.html
@@ -2,14 +2,18 @@
   <div [style]="barBackgroundStyle">
     <div [style]="barThresholdStyle">
       <div [style]="barLevelStyle">
-        <strong>{{ barValue }}</strong
-        ><sup *ngIf="unit">{{ unit }}</sup>
+        <strong>{{ barValue }}</strong>
+        @if (unit) {
+          <sup>{{ unit }}</sup>
+        }
       </div>
     </div>
   </div>
 </div>
 <div [style]="descriptionStyle">{{ thresholdDescription }}:</div>
 <div [style]="valueStyle">
-  <strong>{{ thresholdValue }}</strong
-  ><sup *ngIf="unit">{{ unit }}</sup>
+  <strong>{{ thresholdValue }}</strong>
+  @if (unit) {
+    <sup>{{ unit }}</sup>
+  }
 </div>
