--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -1,35 +1,45 @@
 <ion-item lines="none" class="ion-no-padding">
-  <ion-progress-bar
-    type="indeterminate"
-    color="ibf-grey"
-    class="ion-margin"
-    *ngIf="timelineState.timeStepButtons.length < 1"
-  ></ion-progress-bar>
-  <ion-button
-    *ngFor="let timeStepButton of timelineState.timeStepButtons"
-    expand="full"
-    disabled="{{ timeStepButton.disabled }}"
-    color="{{
-      timeStepButton.thresholdReached
-        ? 'ibf-trigger-alert-secondary'
-        : 'ibf-no-alert-tertiary'
-    }}"
-    fill="solid"
-    data-test="timeline-button"
-    [class.active]="timeStepButton.active"
-    [class.alert]="timeStepButton.thresholdReached && !timeStepButton?.disabled"
-    [class.noEvent]="timeStepButton.noEvent"
-    (click)="
-      handleTimeStepButtonClick(timeStepButton.value, timeStepButton.eventName)
-    "
-  >
-    <app-date-button
-      [date]="timeStepButton.date"
-      [active]="!timeStepButton.disabled"
-      [alert]="timeStepButton.alert"
-      [thresholdReached]="timeStepButton.thresholdReached"
-      [eventName]="timeStepButton.eventName"
-      [duration]="timeStepButton.duration"
-    ></app-date-button>
-  </ion-button>
+  @if (timelineState.timeStepButtons.length < 1) {
+    <ion-progress-bar
+      type="indeterminate"
+      color="ibf-grey"
+      class="ion-margin"
+    ></ion-progress-bar>
+  }
+  @for (
+    timeStepButton of timelineState.timeStepButtons;
+    track timeStepButton.value
+  ) {
+    <ion-button
+      expand="full"
+      disabled="{{ timeStepButton.disabled }}"
+      color="{{
+        timeStepButton.thresholdReached
+          ? 'ibf-trigger-alert-secondary'
+          : 'ibf-no-alert-tertiary'
+      }}"
+      fill="solid"
+      data-test="timeline-button"
+      [class.active]="timeStepButton.active"
+      [class.alert]="
+        timeStepButton.thresholdReached && !timeStepButton?.disabled
+      "
+      [class.noEvent]="timeStepButton.noEvent"
+      (click)="
+        handleTimeStepButtonClick(
+          timeStepButton.value,
+          timeStepButton.eventName
+        )
+      "
+    >
+      <app-date-button
+        [date]="timeStepButton.date"
+        [active]="!timeStepButton.disabled"
+        [alert]="timeStepButton.alert"
+        [thresholdReached]="timeStepButton.thresholdReached"
+        [eventName]="timeStepButton.eventName"
+        [duration]="timeStepButton.duration"
+      ></app-date-button>
+    </ion-button>
+  }
 </ion-item>
